--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="col-lg-7">
                     <div class="banner_text">
                         <div class="banner_text_iner">
-                            <h5>Hi there, This is Alex</h5>
+                            <h5>Hi there 👋, This is Deborah Adesokan</h5>
                             <h1>Digital product
                                     designer</h1>
                             <div class="banner_btn">
