--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                     <div class="banner_text">
                         <div class="banner_text_iner">
                             <h5>Hi there 👋, This is Deborah Adesokan</h5>
-                            <h1>Digital product
-                                    designer</h1>
+                            <h1>Product Manager
+                                    </h1>
                             <div class="banner_btn">
                                 <a href="#" class="btn_1">Contact me</a>
                             </div>
